added boolean param for clock to have secs, fixed some layouting in Top

--- a/src/components/Top/Clock/Clock.css
+++ b/src/components/Top/Clock/Clock.css
@@ -1,4 +1,5 @@
 .clock {
+  justify-self: end;
     height: 100%;
     color: white;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
