--- a/src/components/Top/Weather/Weather.css
+++ b/src/components/Top/Weather/Weather.css
@@ -1,4 +1,6 @@
 .weather-container {
+    justify-self: end;
+    width: 60%;
     position: relative;
     background-color:rgba(255,255,255, 0.6);
     border-radius: 4px;
