--- a/src/components/Top/Weather/Weather.css
+++ b/src/components/Top/Weather/Weather.css
@@ -1,6 +1,7 @@
 .weather-container {
     justify-self: end;
     width: 60%;
+    min-width: 350px;
     position: relative;
     background-color:rgba(255,255,255, 0.6);
     border-radius: 4px;
